--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,6 @@ line_length = 120
 multi_line_output = 0
 known_standard_library = pkg_resources,setuptools
 known_first_party =
-known_third_party =PIL,cv2,numpy,torch,turbojpeg
+known_third_party =PIL,cv2,decord,numpy,tensorflow,torch,turbojpeg
 no_lines_before = STDLIB,LOCALFOLDER
 default_section = THIRDPARTY
